--- a/apply_all.yaml
+++ b/apply_all.yaml
@@ -5,6 +5,7 @@
 - import_playbook: kuber_common.yaml
 - import_playbook: kuber_init.yaml
 - import_playbook: kuber_ingress.yaml
+- import_playbook: kuber_namespace.yaml
+- import_playbook: kuber_tls.yaml
 - import_playbook: kuber_dashboard.yaml
 - import_playbook: kuber_persistent_volume.yaml
-- import_playbook: helm_install.yaml
