--- a/roles/dashboard/tasks/main.yaml
+++ b/roles/dashboard/tasks/main.yaml
@@ -1,7 +1,7 @@
 ---
 
 - name: Install Dashboard mandatory
-  shell: kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/v2.0.0-beta1/aio/deploy/recommended.yaml
+  shell: kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/v2.0.0-beta6/aio/deploy/recommended.yaml
   tags:
   - install_dashboard
 
@@ -12,10 +12,10 @@
   tags:
   - install_dashboard
 
-- name: Install Dashboard service
-  shell: kubectl apply -f /tmp/dashboard-ingress.yaml
-  tags:
-  - install_dashboard
+#- name: Install Dashboard service
+#  shell: kubectl apply -f /tmp/dashboard-ingress.yaml
+#  tags:
+#  - install_dashboard
 
 - name: Grant access to read cluster to kubernetes-dashboard SA
   shell: kubectl create clusterrolebinding kubernetes-dashboard-cluster-admin --clusterrole cluster-admin --serviceaccount=kubernetes-dashboard:kubernetes-dashboard
